# mcp-agent

./: .dockerignore  .env.example  .gitignore  DEVELOPMENT_GUIDE.md  Dockerfile  GUIDE.md  MCP_SERVER.md  MCP_SERVER_GUIDE.md  NOTICE_GEMMA  README.md  RULES.md  ReWOO.md  TERMS_GEMMA  config.json  docker-compose.yml  download_model.py  echo_script.py  main.py  mcp.json  package.json  pyproject.toml  pytest.ini  react_output.gbnf  requirements.txt  run.sh  startup.sh
agent/: evidence_generator.py  final_answer_generator.py  graph.py  output_processor.py  planner.py  solver.py  state.py  step_executor.py  tool_input_generator.py  tool_selector.py  utils.py  validation.py
agent/nodes/: evidence_processor.py  final_answer.py  plan_parser.py  plan_validator.py  planner.py  tool_executor.py  tool_filter_node.py  tool_input_preparer.py  tool_selector.py
agent/prompts/: answer_prompts.py  evidence_prompts.py  final_answer_prompts.py  parser_prompts.py  plan_prompts.py  tool_filter_prompts.py  tool_prompts.py
agent/tools/: executor.py  loader.py  models.py  registry.py
app/: dependencies.py  main.py
app/api/: api.py
app/api/v1/: api.py
app/api/v1/endpoints/: __init__.py  inference.py  status.py
app/core/: config.py
app/grammar/: react_output.gbnf
app/mcp_client/: client.py  server_manager.py
app/models/: api_models.py
app/prompts/: react_base_simple.md  react_base_simple.txt  react_example_simple_direct.txt  react_example_simple_tool.txt  react_final_reminder.txt  react_json_structure_simple.txt  react_rules_simple.txt  react_system_core.txt  react_system_examples.txt  react_system_final_reminder.txt
app/services/: inference_service.py  llm_interface.py  mcp_service.py  model_manager.py  model_service.py  prompt_manager.py  react_processor.py  react_utils.py  sequential_thinking.py
app/utils/: download.py  log_utils.py
core/: llm_loader.py
core/schemas/: plan_output.py
test_scripts/: test_chat_api.py  test_e2e_completion.py  test_reasoning_quality.py
tests/: conftest.py
tests/core/: test_llm_loader.py
tests/integration/: test_api.py  test_e2e.py  test_rewoo_agent.py
tests/tools/: test_executor.py
tests/unit/: test_config.py
